# netcortex

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.host-worker.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  run_worker.sh
.cursor/rules/: netcortex.mdc
deploy/: build-push.sh  values-local.yaml
deploy/cert-manager/: cluster-issuer.yaml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  deployment-web.yaml  deployment-worker.yaml  ingress.yaml  pvc.yaml  secret-bootstrap.yaml  service-neo4j.yaml  service-redis.yaml  service-telemetry-grpc.yaml  service-web.yaml  serviceaccount.yaml  statefulset-neo4j.yaml  statefulset-redis.yaml
docker/: Dockerfile
docs/: access-layer.md  adapters.md  agentic-ops.md  architecture.md  graph-topology.md  graph.md  history-seam.md  implementation-journal.md  mcp-tools.md  netbox-integration.md  scaling-plan.md  secrets.md  status-page.md  sync-engine.md
netcortex/: __init__.py  config.py  main.py  netbox.py  state.py  worker.py
netcortex/access/: __init__.py  cli.py  netconf.py  restconf.py
netcortex/adapters/: __init__.py  base.py  catalyst_center.py  fmc.py  generic_rest.py  intersight.py  meraki.py  nexus_dashboard.py  snmp.py  snmp_counters.py  thousandeyes.py  vsphere.py
netcortex/graph/: __init__.py  client.py  correlate.py  history.py  ingest.py  models.py  query.py  schema.py  site_correlate.py
netcortex/ingest/: __init__.py  hash.py  queue.py  worker.py
netcortex/mcp/: __init__.py  prompts.py  server.py
netcortex/mcp/tools/: access.py  agentic_ops.py  devices.py  documents.py  sync.py  topology.py
netcortex/models/: __init__.py  device.py  interface.py  topology.py  vlan.py
netcortex/secrets/: __init__.py  aws_sm.py  base.py  vault.py
netcortex/snmp/: credentials.py  poller.py  profiles.py  shard.py
netcortex/status/: __init__.py  router.py
netcortex/status/templates/: index.html
netcortex/sync/: __init__.py  netbox_enrich.py  netbox_sites.py  netbox_writeback.py
netcortex/util/: __init__.py  ifname.py  oui.py  timestamps.py
netcortex/webhooks/: __init__.py  catalyst_center.py  meraki.py  router.py  telemetry.py
scratch/: dbg_meraki_emit.py  dbg_meraki_network_snmp.py  dbg_meraki_snmp_state.py  dbg_mx_mgmt.py  dbg_mx_rule_apply.py
skills/: README.md
skills/netcortex-device-access/: SKILL.md
skills/netcortex-health/: SKILL.md
skills/netcortex-incident-response/: SKILL.md
skills/netcortex-lookup/: SKILL.md
skills/netcortex-topology/: SKILL.md
tests/adapters/: test_intersight_helpers.py  test_meraki_helpers.py
tests/graph/: test_history.py
tests/mcp/: test_top_problems_staleness.py
tests/sync/: test_netbox_enrich_delta.py
tests/util/: test_timestamps.py
tools/: _probe_lldp.py  _probe_n9k1_lldp.py
