[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netcortex"
version = "0.6.0.dev51"
description = "The intelligence layer for your network — multi-dimensional graph of the network bridging Meraki, Catalyst Center, Intersight, and more with NetBox as SoT"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # NetBox client
    "pynetbox>=7.3",
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    # MCP server
    "fastmcp>=2.0",
    # Pydantic & settings
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # HTTP client (adapters, RESTCONF)
    "httpx>=0.27",
    # CLI access
    "netmiko>=4.3",
    "scrapli>=2024.1",
    "ntc-templates>=7.0",
    # NETCONF
    "ncclient>=0.6.15",
    "xmltodict>=0.13",
    # SNMP
    "pysnmp>=6.1",
    # Graph database
    "neo4j>=5.0",
    # Scheduling
    "apscheduler>=3.10",
    # Redis (job queue coordination)
    "redis>=5.0",
    # RSA/ECDSA request signing (Intersight, etc.)
    "cryptography>=42.0",
    # Utilities
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "tenacity>=8.3",
    # IEEE OUI → vendor lookup for MAC address enrichment.
    "mac-vendor-lookup>=0.1.15",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.34",
]
vault = [
    "hvac>=2.1",
]
celery = [
    "celery[redis]>=5.4",
]
search = [
    "sentence-transformers>=3.0",
]
all = [
    "boto3>=1.34",
    "hvac>=2.1",
    "celery[redis]>=5.4",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "moto[secretsmanager]>=5.0",   # AWS SM mocking
    "ruff>=0.4",
    "mypy>=1.10",
    "types-xmltodict",
    "boto3>=1.34",                 # needed by dev for moto
    "hvac>=2.1",                   # needed by dev for Vault tests
]

[project.scripts]
netcortex = "netcortex.cli:main"

[project.entry-points."netcortex.adapters"]
meraki = "netcortex.adapters.meraki:MerakiAdapter"
catalyst_center = "netcortex.adapters.catalyst_center:CatalystCenterAdapter"
intersight = "netcortex.adapters.intersight:IntersightAdapter"
nexus_dashboard = "netcortex.adapters.nexus_dashboard:NexusDashboardAdapter"
snmp = "netcortex.adapters.snmp:SnmpAdapter"
generic_rest = "netcortex.adapters.generic_rest:GenericRestAdapter"
vsphere = "netcortex.adapters.vsphere:VSphereAdapter"
fmc = "netcortex.adapters.fmc:FmcAdapter"
thousandeyes = "netcortex.adapters.thousandeyes:ThousandEyesAdapter"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
